# 4d-ptv

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  README.md
Calibration/: MakeCalibration.m  calib2D.m
Calibration/CalibrationChecking/: CalibTest.m  Calib_visualisation.m
Center2Rays/: Centers2Rays.m  Centers2RaysParallel.m  findRays.m  fit3Dline.m  fit3Dline_nan.m  readCentersMAT.m  submission_Centers2Rays.m
CenterFinding/: BackgroundComputation.m  CenterFinding2D.m  Submission_center_finding.m  pkfnd.m  submission_CenterFinding2D.m
Documentation/: environment.yml
Documentation/source/: Centers2Rays.rst  CentersFinding.rst  Dataprocessing.rst  ExperimentalAdvices.rst  Matching.bib  Matching.rst  Post-Processing.rst  Stitching.rst  Tracking.rst  Tutorial.rst  calibration.rst  conf.py  index.rst  isoamsr.txt  psmn.rst  test.rst
Matching/: MaxDistanceChecking.m  RaysSavingForParallelMatching.m
Matching/STMCpp/: STM.cpp  STM_CMatrix.h  STM_hdf5.cpp  rays.ini  (+3 more)
Matching/STMPython/: Makefile  README.md  STM.py  STMFunctions.py  crawlfiles.py  profile_simple.py  pyproject.toml  stm.py  stm_hdf5.py  stm_util.py  stm_util_unoptimized.py  submission.sh  test_stm_util.py  util_group_by_cells.py  util_groupby.py
Post-Processing/: SelectInit.m  StatPairDisp.m  VItesse_moyen.m  Vitesse_moyenne.m  pairdisp_delta.m  pairdispersion.m  visu.m  visu_1.m
ReadFiles/: h52matches.m  h52matchesTracking.m  h52stitch.m  h52tracks.m  plotRay.m  readMatches.m  readRays.m
Stitching/: Stitching.m  stitchTracks.m
Tracking3D/: track3d.m  track3d_manualfit.m  track3d_polyfit.m
(+394 files in other folders)
