[project]
name = "STMPython"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
]
dependencies = ["numpy==1.22.0", "transonic==0.4.12", "pythran==0.11.0", "h5py", "pytest"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
